--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,32 +29,32 @@ repos:
     rev: v0.12.0
     hooks:
       - id: markdownlint
-  - repo: https://github.com/psf/black
-    rev: '23.1.0'
-    hooks:
-      - id: black
+  # - repo: https://github.com/psf/black
+  #   rev: '23.1.0'
+  #   hooks:
+  #     - id: black
   - repo: https://github.com/PyCQA/bandit
     rev: '1.7.4'
     hooks:
       - id: bandit
-  - repo: https://github.com/PyCQA/flake8
-    rev: '6.0.0'
-    hooks:
-      - id: flake8
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.0.0
-    hooks:
-      - id: mypy
+  # - repo: https://github.com/PyCQA/flake8
+  #   rev: '6.0.0'
+  #   hooks:
+  #     - id: flake8
+  # - repo: https://github.com/pre-commit/mirrors-mypy
+  #   rev: v1.0.0
+  #   hooks:
+  #     - id: mypy
   - repo: https://github.com/PyCQA/pydocstyle
     rev: '6.3.0'
     hooks:
       - id: pydocstyle
-  - repo: https://github.com/PyCQA/pylint
-    rev: v2.16.2
-    hooks:
-      - id: pylint
-  - repo: https://github.com/pycqa/isort
-    rev: '5.12.0'
-    hooks:
-      - id: isort
-        args: ["--profile", "black", "--filter-files"]
+  # - repo: https://github.com/PyCQA/pylint
+  #   rev: v2.16.2
+  #   hooks:
+  #     - id: pylint
+  # - repo: https://github.com/pycqa/isort
+  #   rev: '5.12.0'
+  #   hooks:
+  #     - id: isort
+  #       args: ["--profile", "black", "--filter-files"]
