--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,30 +13,30 @@ repos:
       - id: mixed-line-ending
         args: ['--fix=lf']
       - id: trailing-whitespace
-  - repo: https://github.com/jumanjihouse/pre-commit-hooks
-    rev: '3.0.0'
-    hooks:
-      - id: script-must-have-extension
-  - repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.4.2
-    hooks:
-      - id: forbid-tabs
-  - repo: https://github.com/gruntwork-io/pre-commit
-    rev: v0.1.18
-    hooks:
-      - id: shellcheck
-  - repo: https://github.com/markdownlint/markdownlint
-    rev: v0.12.0
-    hooks:
-      - id: markdownlint
+  # - repo: https://github.com/jumanjihouse/pre-commit-hooks
+  #   rev: '3.0.0'
+  #   hooks:
+  #     - id: script-must-have-extension
+  # - repo: https://github.com/Lucas-C/pre-commit-hooks
+  #   rev: v1.4.2
+  #   hooks:
+  #     - id: forbid-tabs
+  # - repo: https://github.com/gruntwork-io/pre-commit
+  #   rev: v0.1.18
+  #   hooks:
+  #     - id: shellcheck
+  # - repo: https://github.com/markdownlint/markdownlint
+  #   rev: v0.12.0
+  #   hooks:
+  #     - id: markdownlint
   # - repo: https://github.com/psf/black
   #   rev: '23.1.0'
   #   hooks:
   #     - id: black
-  - repo: https://github.com/PyCQA/bandit
-    rev: '1.7.4'
-    hooks:
-      - id: bandit
+  # - repo: https://github.com/PyCQA/bandit
+  #   rev: '1.7.4'
+  #   hooks:
+  #     - id: bandit
   # - repo: https://github.com/PyCQA/flake8
   #   rev: '6.0.0'
   #   hooks:
@@ -45,10 +45,10 @@ repos:
   #   rev: v1.0.0
   #   hooks:
   #     - id: mypy
-  - repo: https://github.com/PyCQA/pydocstyle
-    rev: '6.3.0'
-    hooks:
-      - id: pydocstyle
+  # - repo: https://github.com/PyCQA/pydocstyle
+  #   rev: '6.3.0'
+  #   hooks:
+  #     - id: pydocstyle
   # - repo: https://github.com/PyCQA/pylint
   #   rev: v2.16.2
   #   hooks:
@@ -56,5 +56,5 @@ repos:
   # - repo: https://github.com/pycqa/isort
   #   rev: '5.12.0'
   #   hooks:
-  #     - id: isort
-  #       args: ["--profile", "black", "--filter-files"]
+  #     # - id: isort
+  #     #   args: ["--profile", "black", "--filter-files"]
