--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,5 +56,5 @@ repos:
   # - repo: https://github.com/pycqa/isort
   #   rev: '5.12.0'
   #   hooks:
-  #     # - id: isort
-  #     #   args: ["--profile", "black", "--filter-files"]
+  #     - id: isort
+  #       args: ["--profile", "black", "--filter-files"]
