--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,10 +2,11 @@ ARG VARIANT="3.11-bullseye"
 
 FROM "mcr.microsoft.com/vscode/devcontainers/python:${VARIANT}"
 
-RUN pipx install poetry \
-    && pipx install pre-commit
+RUN pipx install pre-commit
 
-ENV POETRY_VIRTUALENVS_CREATE=true
+ENV POETRY_VIRTUALENVS_CREATE=false
+
+RUN pip install -U pip setuptools poetry
 
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends ruby-full shellcheck
