--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ python = "^3.11"
 click = "^8.1.3"
 
 
+[tool.poetry.group.dev.dependencies]
+yapf = "^0.32.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
