--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,7 +6,15 @@ RUN pipx install pre-commit
 
 ENV POETRY_VIRTUALENVS_CREATE=false
 
-RUN pip install -U pip setuptools poetry
+RUN pip install -U \
+    pip \
+    setuptools \
+    poetry \
+    yapf \
+    bandit \
+    pycodestyle \
+    pydocstyle \
+    toml
 
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends ruby-full shellcheck
